--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6"
